--- a/quote.html
+++ b/quote.html
@@ -3,10 +3,80 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Gardener - Gardening Website Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <title>Request Quote | Web_Creator | Your Website, Perfectly Designed</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>WebCreator — Teen Freelance Web Designers | den_enterprise</title>
+  <meta name="description" content="WebCreator — a teen freelancer collective (part of den_enterprise) led by Denver John Demis. We build modern, affordable websites for small businesses and creatives. " />
+  <meta name="keywords" content="teen web freelancers, web design teens, den_enterprise, Denver John Demis, Nandan K, Malcolm Sam, affordable web design, youth web studio" />
+  <meta name="author" content="Denver John Demis, den_enterprise" />
+
+  <!-- Canonical: change to the page's preferred URL -->
+  <link rel="canonical" href="https://den-enterprise.github.io/Web-Creator/" />
+
+  <!-- Robots control -->
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph (for Facebook, LinkedIn previews) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="WebCreator — Teen Freelance Web Designers | den_enterprise" />
+  <meta property="og:description" content="WebCreator — a teen freelancer collective (part of den_enterprise) led by Denver John Demis. We build modern, affordable websites for small businesses and creatives." />
+  <meta property="og:url" content="https://den-enterprise.github.io/Web-Creator/" />
+  <meta property="og:site_name" content="WebCreator (den_enterprise)" />
+  <meta property="og:image" content="https://www.YOUR_DOMAIN.com/assets/og-image.webp" />
+  <meta property="og:image:alt" content="WebCreator team — teen freelance web designers" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="WebCreator — Teen Freelance Web Designers" />
+  <meta name="twitter:description" content="Part of den_enterprise, run by Denver John Demis — affordable websites designed by teens." />
+  <meta name="twitter:image" content="https://www.YOUR_DOMAIN.com/assets/twitter-image.webp" />
+ 
+  <!-- Structured Data (JSON-LD) — Organization + WebSite + People (edit fields) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://den-enterprise.github.io/Web-Creator/",
+        "name": "WebCreator (den_enterprise)",
+        "url": "hhttps://den-enterprise.github.io/Web-Creator/",
+        "logo": "https://www.YOUR_DOMAIN.com/assets/logo.webp",
+
+        "founder": [
+          {
+            "@type": "Person",
+            "name": "Denver John Demis"
+          },
+          {
+            "@type": "Person",
+            "name": "Nandan K"
+          },
+          {
+            "@type": "Person",
+            "name": "Malcolm Sam"
+          }
+        ],
+        "memberOf": {
+          "@type": "Organization",
+          "name": "den_enterprise"
+        },
+        "description": "WebCreator — teen freelance web designers building websites for small businesses and creatives."
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://den-enterprise.github.io/Web-Creator/",
+        "url": "https://den-enterprise.github.io/Web-Creator/",
+        "name": "WebCreator",
+        "publisher": {
+          "@id": "https://den-enterprise.github.io/Web-Creator/"
+        },
+        "inLanguage": "en"
+      }
+    ]
+  }
+  </script>
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -40,67 +110,41 @@
     <!-- Spinner End -->
 
 
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-dark text-light px-0 py-2">
-        <div class="row gx-0 d-none d-lg-flex">
-            <div class="col-lg-7 px-5 text-start">
-                <div class="h-100 d-inline-flex align-items-center me-4">
-                    <span class="fa fa-phone-alt me-2"></span>
-                    <span>+012 345 6789</span>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center">
-                    <span class="far fa-envelope me-2"></span>
-                    <span>info@example.com</span>
-                </div>
-            </div>
-            <div class="col-lg-5 px-5 text-end">
-                <div class="h-100 d-inline-flex align-items-center mx-n2">
-                    <span>Follow Us:</span>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-link text-light" href=""><i class="fab fa-instagram"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Topbar End -->
-
-
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h1 class="m-0">Gardener</h1>
+        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5 nav-logo">
+            <img src="img/logo.webp"/>
         </a>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <!-- <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
-                <a href="project.html" class="nav-item nav-link">Projects</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+        </button> -->
+        <!-- <div class="collapse navbar-collapse" id="navbarCollapse"> -->
+           <div class="navbar-nav ms-auto p-4 p-lg-0">
+                <!-- <a href="index.html" class="nav-item nav-link active">Home</a> -->
+                <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
+                <!-- <a href="service.html" class="nav-item nav-link">Services</a>
+                <a href="project.html" class="nav-item nav-link">Portfolio</a> -->
+                <!-- <div class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu bg-light m-0">
                         <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="quote.html" class="dropdown-item active">Free Quote</a>
+                        <a href="quote.html" class="dropdown-item">Free Quote</a>
                         <a href="team.html" class="dropdown-item">Our Team</a>
                         <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
-                </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                </div> -->
+                <!-- <a href="contact.html" class="nav-item nav-link">Contact</a> -->
             </div>
-            <a href="" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
-        </div>
+            <a href="quote.html" class="btn btn-primary py-4 px-lg-4 rounded-0 d-none d-lg-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
+        <!-- </div> -->
     </nav>
     <!-- Navbar End -->
 
 
+
     <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <!-- <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
             <h1 class="display-3 text-white mb-4 animated slideInDown">Free Quote</h1>
             <nav aria-label="breadcrumb animated slideInDown">
@@ -111,102 +155,109 @@
                 </ol>
             </nav>
         </div>
-    </div>
+    </div> -->
     <!-- Page Header End -->
 
 
-    <!-- Quote Start -->
-    <div class="container-fluid py-5">
-        <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-bold text-primary">Free Quote</p>
-                <h1 class="display-5 mb-5">Get A Free Quote</h1>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-lg-7">
-                    <div class="bg-light rounded p-4 p-sm-5 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="row g-3">
-                            <div class="col-sm-6">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name">
-                                    <label for="gname">Your Name</label>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-floating">
-                                    <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email">
-                                    <label for="gmail">Your Email</label>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control border-0" id="cname" placeholder="Child Name">
-                                    <label for="cname">Your Mobile</label>
-                                </div>
-                            </div>
-                            <div class="col-sm-6">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control border-0" id="cage" placeholder="Child Age">
-                                    <label for="cage">Service Type</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <textarea class="form-control border-0" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                    <label for="message">Message</label>
-                                </div>
-                            </div>
-                            <div class="col-12 text-center">
-                                <button class="btn btn-primary py-3 px-4" type="submit">Submit Now</button>
-                            </div>
-                        </div>
-                    </div>
+<!-- Quote Start -->
+<div class="container-fluid quote py-5" data-parallax="scroll" data-image-src="img\QUOTE-BG.webp">
+  <div class="container py-5">
+    <div class="row justify-content-center">
+      <div class="col-lg-7">
+        <div class="bg-white rounded p-4 p-sm-5 wow fadeIn" data-wow-delay="0.5s">
+          <h1 class="display-5 text-center mb-5">Get A Free Quote</h1>
+          <form action="https://formspree.io/f/xblzelly" method="POST">
+            <div class="row g-3">
+              
+              <div class="col-sm-6">
+                <div class="form-floating">
+                  <input type="text" class="form-control bg-light border-0" id="gname" name="name" placeholder="Your Name" required>
+                  <label for="gname">Your Name</label>
                 </div>
+              </div>
+
+              <div class="col-sm-6">
+                <div class="form-floating">
+                  <input type="email" class="form-control bg-light border-0" id="gmail" name="email" placeholder="Your Email" required>
+                  <label for="gmail">Your Email</label>
+                </div>
+              </div>
+
+              <div class="col-sm-6">
+                <div class="form-floating">
+                  <input type="text" class="form-control bg-light border-0" id="cname" name="mobile" placeholder="Your Mobile">
+                  <label for="cname">Your Mobile</label>
+                </div>
+              </div>
+
+              <div class="col-sm-6">
+                <div class="form-floating">
+                  <input type="text" class="form-control bg-light border-0" id="cage" name="service" placeholder="Service Type">
+                  <label for="cage">Service Type</label>
+                </div>
+              </div>
+
+              <div class="col-12">
+                <div class="form-floating">
+                  <textarea class="form-control bg-light border-0" placeholder="Leave a message here" id="message" name="message" style="height: 100px"></textarea>
+                  <label for="message">Message</label>
+                </div>
+              </div>
+
+              <div class="col-12 text-center">
+                <button class="btn btn-primary py-3 px-4" type="submit">Submit Now</button>
+              </div>
             </div>
+          </form>
         </div>
+      </div>
     </div>
-    <!-- Quote End -->
+  </div>
+</div>
+<!-- Quote End -->
 
 
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-light footer py-2 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                <div class="col-lg-4 col-md-6">
+                    <h4 class="text-white mb-4">Contact Us</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Trivandrum, Kerala Based</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+091 9400 534719</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>denenterprisesinnovation@gmail.com</p>
+                    <!--
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-square btn-outline-light rounded-circle me-2" href=""><i class="fab fa-linkedin-in"></i></a>
-                    </div>
+                    </div>-->
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Services</h4>
+                <div class="col-lg-1 col-md-0">
+                    <!-- <h4 class="text-white mb-4">Services</h4>
                     <a class="btn btn-link" href="">Landscaping</a>
                     <a class="btn btn-link" href="">Pruning plants</a>
                     <a class="btn btn-link" href="">Urban Gardening</a>
                     <a class="btn btn-link" href="">Garden Maintenance</a>
-                    <a class="btn btn-link" href="">Green Technology</a>
+                    <a class="btn btn-link" href="">Green Technology</a> -->
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Quick Links</h4>
+                <div class="col-lg-1 col-md-0">
+                    <!-- <h4 class="text-white mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="">About Us</a>
                     <a class="btn btn-link" href="">Contact Us</a>
                     <a class="btn btn-link" href="">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="">Support</a> -->
                 </div>
-                <div class="col-lg-3 col-md-6">
-                    <h4 class="text-white mb-4">Newsletter</h4>
+                <div class="col-lg-5 col-md-6" style="display: flex;position: relative;align-items: center;justify-content: center;">
+                    <img src="img/footer.webp" style="width: 100%;"/>
+                    <!-- <h4 class="text-white mb-4">Newsletter</h4>
                     <p>Dolor amet sit justo amet elitr clita ipsum elitr est.</p>
                     <div class="position-relative w-100">
                         <input class="form-control bg-light border-light w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -215,20 +266,21 @@
 
 
     <!-- Copyright Start -->
-    <div class="container-fluid copyright py-4">
+    <!-- <div class="container-fluid copyright py-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                     &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                    
                     Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Copyright End -->
+
 
 
     <!-- Back to Top -->
