--- a/index.html
+++ b/index.html
@@ -685,13 +685,13 @@ Facts End -->
                         </div>
                         <div class="testimonial-item">
                             <img class="img-fluid rounded mb-3" src="img/testimonial-2.webp" alt="">
-                            <p class="fs-5">They made a portfolio website for me, which really helped me gain attention from many people and helped me get orders. The website was so elegantly done and visually pleasing. I was so happy with his work and would definitely recommend their to others.</p>
+                            <p class="fs-5">They helped me create an amazing website which works as my portfolio, all based on my personal needs and requirements. I would recommend them as one of the best in there field due to there perseverance and commitment to clients!</p>
                            <h4>Nithya AS </h4>
                              <a href="https://www.linkedin.com/in/nithya-a-s-3b8310296/"><span>Linked <i class="fab fa-linkedin-in"></i></span></a>
                         </div>
                         <div class="testimonial-item">
                             <img class="img-fluid rounded mb-3" src="img/testimonial-3.webp" alt="">
-                            <p class="fs-5">They made a portfolio website for me, which really helped me gain attention from many people and helped me get orders. The website was so elegantly done and visually pleasing. I was so happy with his work and would definitely recommend their to others.</p>
+                            <p class="fs-5">They made a portfolio website for me, which really helped me gain attention from many people and helped me get orders. The website was so elegantly done and visually pleasing. I was so happy with there work and would definitely recommend them to others.</p>
                             <h4>Alaynaa Marium</h4>
                             <a href="https://www.linkedin.com/in/alaynaa-marium-55904a28b/"><span>Linked <i class="fab fa-linkedin-in"></i></span></a>
                         </div>
@@ -708,7 +708,7 @@ Facts End -->
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-md-6">
-                    
+
                     <h4 class="text-white mb-4">Contact Us</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Trivandrum, Kerala Based</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+091 9400 534719</p>
